fix modals on dark mode

--- a/public/scss/app-dark.scss
+++ b/public/scss/app-dark.scss
@@ -22,7 +22,7 @@ body {
 }
 
 .modal-content {
-  background-color: $black;
+  background-color: $black-lightest;
 }
 
 .modal-header {
